[gd_scene load_steps=4 format=3 uid="uid://sww3gp5nmyai"]

[ext_resource type="Script" path="res://enemy_stg_1.gd" id="1_5e3ea"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jdgjm"]
animations = []

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_50vs6"]

[node name="Enemy stg1" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_5e3ea")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jdgjm")
animation = &""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_50vs6")

[node name="RayCast2DR" type="RayCast2D" parent="."]
target_position = Vector2(-32, -32)

[node name="RayCast2DM" type="RayCast2D" parent="."]
target_position = Vector2(-64, 0)

[node name="RayCast2DL" type="RayCast2D" parent="."]
target_position = Vector2(-32, 32)
